--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -1,15 +1,35 @@
-<style>
-elemento {
-}
-.bootstrap-select > .dropdown-toggle.bs-placeholder, 
-.bootstrap-select > .dropdown-toggle.bs-placeholder:active, 
-.bootstrap-select > .dropdown-toggle.bs-placeholder:focus, 
-.bootstrap-select > .dropdown-toggle.bs-placeholder:hover {
-    color: black;
+/*
+input[type="text"] {
+    padding:5px; 
+    border:2px solid #ccc; 
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 
+input[type="text"]:focus {
+    border-color: red;
+}
+
+input[type="password"] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+input[type="password"]:focus {
+    border-color: red;
+}
+
+input[type="date"] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}*/
+
  /*----------------------------------------login.php-style---------------------------------------*/
- .Login {
+.Login {
 	background-color: #add8e6;
 	border-radius: 8px;
 	height: 353px;
@@ -59,17 +79,6 @@ elemento {
 	margin-left: 60px;
 }
 
-input[type="text"] {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-input[type="text"]:focus {
-    border-color: red;
-}
-
 .Login_ps {
 	background: rgba(0, 0, 0, 0) url(../../Vista/img/Login_key.png) no-repeat scroll 2px 0px;
 	color: black;
@@ -79,17 +88,6 @@ input[type="text"]:focus {
 	width: 280px;
 	margin-top: 10px;
 	margin-left: 60px;
-}
-
-input[type="password"] {
-    padding: 5px;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-input[type="password"]:focus {
-    border-color: red;
 }
 
 .Login_btn {
@@ -107,416 +105,126 @@ input[type="password"]:focus {
     padding: 11px 50px 9px 15px;
     text-transform: uppercase;
 }
- /*---------------------------------------- tareaAdmin.php-style---------------------------------------*/
- .casilla_generica {
-    color: black;
-    border-radius: 10px;
-    font: 22px/16px 'Calibri';
-    text-align: center;
-    width: 472px;
-    margin-top: 10px;
-    margin-left: -36px;
-}
+ /*----------------------------------------comun-style---------------------------------------*/
 
-.img_AddTarea{
-    width: 60px;
-height: 53px;
-margin-left: -60px;
-top: -32px;
-position: relative;
-margin-bottom: -81px;
-
-}
-
-input[type="date"] {
-    padding: 5px;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-.Formulario_Tarea {
-    height: 327px;
-    margin-top: 35px;
-    margin-left: 20%;
-    width: 438px;
-    background: lightgray none repeat scroll 0 0;
-    border-radius: 12px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 6px;
-}
-
-.Formulario_Tarea h1 {
-    text-align: left;
-    padding-left: 40px;
-    text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -13px -15px 1px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
-}
-
-.Formulario_Tareaa {
-   height: 255px;
-   margin-top: 23px;
-   margin-left: 28%;
-   width: 438px;
-    background: lightgray none repeat scroll 0 0;
-    border-radius: 12px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 6px;
-}
-
-.Formulario_Tareaa h1 {
-    text-align: left;
-    padding-left: 40px;
-    text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -13px -15px 1px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
-}
-.tarea_btn {
-background-color: #F41035;
-border: 1px solid #FF0500;
-border-radius: 9px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 10px;
-margin: -4px 152px 12px 288px;
-padding: 4px 17px 28px 33px;
-text-transform: uppercase;
-opacity: 0.9;
-}
-
-.tarea_btn:hover {
-background-color: #F41035;
-border: 3px solid #FF0500;
-border-radius: 9px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 10px;
-margin: -4px 152px 12px 288px;
-padding: 4px 17px 28px 33px;
-text-transform: uppercase;
-opacity: 1;
-}
-/*----------------------------------------  usuario.php -style---------------------------------------*/
-
-.Formulario_AddUser {
-    height: 260px;
-    margin-top: 19px;
-    margin-left: 2%;
-    width: 356px;
-    background: lightgray none repeat scroll 0 0;
-    border-radius: 12px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 8px;
-}
-
-.Formulario_AddUser h1 {
-    text-align: left;
-    padding-left: 40px;
-    text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -13px -15px 1px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
-}
-
-.Formulario_TablaAbogados {
+.listadoDiv {
     height: 100%;
     margin-top: 6px;
     margin-left: -7%;
-    width: 45%;
+    width: 80%;
     background: lightgray none repeat scroll 0 0;
     border-radius: 19px;
     border-bottom: 3px solid #b5caff;
-    text-align: center;
+    text-align: left;
     top: 9px;
 }
 
-.Formulario_TablaAbogados h1 {
+.listadoDiv h1 {
     text-align: left;
     padding-left: 40px;
-    text-transform: uppercase;
     line-height: 2;
     border-left: 1px solid #244180;
     border-right: 1px solid #244180;
     margin: -13px -15px 1px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
+    background-color: #DF213C;
     color: #fff;
     display: block;
     font-family: 'ProximaNova-Light',sans-serif;
     font-size: 20px;
 }
 
-.casilla_addUser{
+.formData {
+    height: 100%;
+    margin-top: 6px;
+    margin-left: -7%;
+    width: 50%;
+    background: lightgray none repeat scroll 0 0;
+    border-radius: 19px;
+    border-bottom: 3px solid #b5caff;
+    text-align: left;
+    top: 9px;
+}
+
+.formData h1 {
+    text-align: left;
+    padding-left: 40px;
+    line-height: 2;
+    border-left: 1px solid #244180;
+    border-right: 1px solid #244180;
+    margin: -13px -15px 1px -16px;
+    background-color: #DF213C;
+    color: #fff;
+    display: block;
+    font-family: 'ProximaNova-Light',sans-serif;
+    font-size: 20px;
+}
+
+.casillaFormulario {
     color: black;
     border-radius: 10px;
     font: 22px/16px 'Calibri';
-    text-align: center;
-    width: 256px;
+    text-align: left;
     margin-top: 8px;
     margin-left: 36px;
 }
 
-.addUsuario_btn {
-background-color: #F41035;
-border: 1px solid #FF0500;
-border: none;
-border-radius: 12px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 17px;
-margin: 2px 54px 0px 194px;
-padding: 11px 14px 9px 19px;
-text-transform: uppercase;
-opacity: 0.5;
+.digitoVerficador {
+    width: 50px;
 }
 
-.addUsuario_btn:hover {
-background-color: #F41035;
-border: 3px solid #FF0500;
-border-radius: 12px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 17px;
-margin: 2px 54px 0px 194px;
-padding: 11px 14px 9px 19px;
-text-transform: uppercase;
-opacity: 1;
+.selectPicker {
+    color: black;
+    border-radius: 10px;
+    font: 20px/14px 'Calibri';
+    text-align: left;
+    margin-top: 8px;
+    margin-left: 36px;
+    height: 36px;
+    width: 225px;
 }
 
-.editUsuario_btn {
+#formAddAbogado_idEspecialidad {
+    margin-left: 0px;
+}
+
+#formAddAtencion_idUsuario {
+    margin-left: 0px;
+}
+
+#formAddAtencion_idAbogado {
+    margin-left: 0px;
+}
+
+.btn {
     background-color: #F41035;
     border: 1px solid #FF0500;
-    border-radius: 22px;
-    color: #FFFFFF;
-    font-family: 'ProximaNova-Regular',sans-serif;
-    font-size: 20px;
-    font-weight: initial;
-    line-height: 26px;
-    margin: 4px -112px 3px -105px;
-    padding: 7px 6px 7px 5px;
-    text-transform: uppercase;
-    opacity: 0.8;
-}
-
-.editUsuario_btn:hover {
-    background-color: #F41035;
-    border: 1px solid #FF0500;
-    border-radius: 22px;
-    color: #FFFFFF;
-    font-family: 'ProximaNova-Regular',sans-serif;
-    font-size: 20px;
-    font-weight: initial;
-    line-height: 26px;
-    margin: 4px -112px 3px -105px;
-    padding: 7px 6px 7px 5px;
-    text-transform: uppercase;
-    opacity: 1;
-}
-
-.deleteUsuario_btn {
-    background-color: #F41035;
-    border: 1px solid #FF0500;
-    border-radius: 22px;
-    color: #FFFFFF;
-    font-family: 'ProximaNova-Regular',sans-serif;
-    font-size: 20px;
-    font-weight: initial;
-    line-height: 26px;
-    margin: 3px -77px 2px -74px;
-    padding: 7px 6px 7px 5px;
-    text-transform: uppercase;
-    opacity: 0.8;
-
-}
-
-.deleteUsuario_btn:hover {
-    background-color: #F41035;
-    border: 1px solid #FF0500;
-    border-radius: 22px;
-    color: #FFFFFF;
-    font-family: 'ProximaNova-Regular',sans-serif;
-    font-size: 20px;
-    font-weight: initial;
-    line-height: 26px;
-    margin: 3px -77px 2px -74px;
-    padding: 7px 6px 7px 5px;
-    text-transform: uppercase;
-    opacity: 1;
-}
-
-.img_AddUser{
-width: 54px;
-height: 55px;
-margin-left: -55px;
-top: -36px;
-position: relative;
-margin-bottom: -69px;
-
-}
-
-/*---------------------------------------- proyectoAdmin.php style---------------------------------------*/
-.Formulario_ProyectoAdmin {
-    height: 137px;
-    margin-top: 14px;
-    margin-left: 5%;
-    width: 345px;
-    background: lightgray none repeat scroll 0 0;
+    border: none;
     border-radius: 12px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 10px;
-
-}
-
-.Formulario_ProyectoAdmin h1 {
-    text-align: left;
-    padding-left: 40px;
+    color: #FFFFFF;
+    font-family: 'ProximaNova-Regular',sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 17px;
+    margin: 2px 54px 0px 194px;
+    padding: 11px 14px 9px 19px;
     text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -13px -15px 1px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
 }
 
-.Formulario_TablaProyectoAdmin {
-    height: 100%;
-margin-top: -122px;
-margin-left: 30%;
-width: 58%;
-
-    background: lightgray none repeat scroll 0 0;
-    border-radius: 19px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 4px;
-}
-
-.Formulario_TablaProyectoAdmin h1 {
-    text-align: left;
-    padding-left: 40px;
+.btn:hover {
+    background-color: #F41035;
+    border-radius: 12px;
+    color: #FFFFFF;
+    font-family: 'ProximaNova-Regular',sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 17px;
+    margin: 2px 54px 0px 194px;
+    padding: 11px 14px 9px 19px;
     text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -21px -16px -3px -16px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
+    opacity: 0.9;
 }
 
-.Formulario_TablaTareasProyectoAdmin {
-    height: 100%;
-    margin-top: 14px;
-    margin-left: 18%;
-    width: 58%;
-    background: lightgray none repeat scroll 0 0;
-    border-radius: 19px;
-    border-bottom: 3px solid #b5caff;
-    text-align: center;
-    top: 4px;
-}
-
-.Formulario_TablaTareasProyectoAdmin h1 {
-    text-align: left;
-    padding-left: 40px;
-    text-transform: uppercase;
-    line-height: 2;
-    border-left: 1px solid #244180;
-    border-right: 1px solid #244180;
-    margin: -20px -20px 1px -21px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
-    color: #fff;
-    display: block;
-    font-family: 'ProximaNova-Light',sans-serif;
-    font-size: 20px;
-}
-
-.casilla_addProyectoAdmin{
-    color: black;
-    border-radius: 10px;
-    font: 22px/16px 'Calibri';
-    text-align: center;
-    width: 256px;
-    margin-top: 8px;
-    margin-left: 36px;
-}
-
-.addProyectoAdmin_btn {
-background-color: #F41035;
-border: 1px solid #FF0500;
-border: none;
-border-radius: 12px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 17px;
-margin: 2px 54px 0px 194px;
-padding: 11px 14px 9px 19px;
-text-transform: uppercase;
-opacity: 0.5;
-}
-
-.addProyectoAdmin_btn:hover {
-background-color: #F41035;
-border: 3px solid #FF0500;
-border-radius: 12px;
-color: #FFFFFF;
-font-family: 'ProximaNova-Regular',sans-serif;
-font-size: 14px;
-font-weight: normal;
-line-height: 17px;
-margin: 2px 54px 0px 194px;
-padding: 11px 14px 9px 19px;
-text-transform: uppercase;
-opacity: 0.9;
-}
-
- /*---------------------------------------- en construccion-style---------------------------------------*/
+/*---------------------------------------- en construccion-style---------------------------------------*/
 .navbar-default {
 	background-color: darkred;
 	border-color: black;
@@ -524,7 +232,6 @@ opacity: 0.9;
 	top: 2px;
 }
 @media (min-width: 768px)
-navbar.less:661
 .navbar {
     border-radius: 8px;
 }
@@ -534,6 +241,14 @@ navbar.less:661
     min-height: 50px;
     margin-bottom: 20px;
     border: 0px solid transparent;
+}
+
+.navbar-default .navbar-brand {
+    color: #fff;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
 }
 
 .container{
@@ -625,5 +340,3 @@ navbar.less:661
 #footer div .connect a.twitter:hover {
 	background-position: -30px -90px;
 }
-
-</style>
