--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -1,32 +1,3 @@
-/*
-input[type="text"] {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-input[type="text"]:focus {
-    border-color: red;
-}
-
-input[type="password"] {
-    padding: 5px;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-input[type="password"]:focus {
-    border-color: red;
-}
-
-input[type="date"] {
-    padding: 5px;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}*/
 
  /*----------------------------------------login.php-style---------------------------------------*/
 .Login {
@@ -59,8 +30,7 @@ input[type="date"] {
     border-left: 1px solid #244180;
     border-right: 1px solid #244180;
     margin: -14px -16px 1px -14px;
-    background-image: linear-gradient(90deg,#DF213C 0%,#8A5B78 100%);
-    background-image: -webkit-gradient(linear,0% 0%,100% 0%,color-stop(0%,#DF213C),color-stop(100%,#8A5B78));
+    background-color: #1da1f2;
     color: #fff;
     display: block;
     font-family: 'ProximaNova-Light',sans-serif;
@@ -126,7 +96,7 @@ input[type="date"] {
     border-left: 1px solid #244180;
     border-right: 1px solid #244180;
     margin: -13px -15px 1px -16px;
-    background-color: #DF213C;
+    background-color: #55acee;
     color: #fff;
     display: block;
     font-family: 'ProximaNova-Light',sans-serif;
@@ -152,7 +122,7 @@ input[type="date"] {
     border-left: 1px solid #244180;
     border-right: 1px solid #244180;
     margin: -13px -15px 1px -16px;
-    background-color: #DF213C;
+    background-color: #55acee;
     color: #fff;
     display: block;
     font-family: 'ProximaNova-Light',sans-serif;
@@ -224,12 +194,26 @@ input[type="date"] {
     opacity: 0.9;
 }
 
+.menuCerrarSesion {
+    position: absolute;
+    margin-left: 68%;
+    margin-top: 14px;
+}
+
+.menuNombreUsuario {
+    position: absolute;
+    margin-left: 74%;
+    margin-top: 14px;
+    font-weight: bolder;
+}
+
 /*---------------------------------------- en construccion-style---------------------------------------*/
 .navbar-default {
-	background-color: darkred;
+	background-color: #3b89c3;
 	border-color: black;
 	opacity: 0.8;
 	top: 2px;
+    opacity: 0.8;
 }
 @media (min-width: 768px)
 .navbar {
