--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -1,5 +1,26 @@
 
  /*----------------------------------------login.php-style---------------------------------------*/
+ body{
+	
+}
+
+#overlayLogin {
+    position: absolute;
+    margin-left: -14px;
+    width: 100%;
+    height: 100%;
+    background:url(../img/fondoLogin.jpg) repeat scroll;
+	background-position: center center;
+	background-attachment: fixed;
+	background-size: cover;
+    opacity: 0.6;
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
+
 .Login {
 	background-color: #add8e6;
 	border-radius: 8px;
