se modifica style footer faltante redes sociales

--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -318,7 +318,7 @@ body{
 	width: 154px;
 }
 #footer div .connect a {
-	background: url(../../Vista/img/icons.png) no-repeat;
+	background: url(../../view/img/icons.png) no-repeat;
 	display: block;
 	float: left;
 	height: 28px;
