--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -280,7 +280,7 @@ body{
 
   ----------------------------------------footer-styles---------------------------------------
 */#footer {
-	background-color: #111111;
+	background-color: #56d7fe;
     margin: 0;
     min-height: 105px;
     padding: 0;
@@ -296,7 +296,7 @@ body{
 	padding: 47px 10px 42px;
 }
 #footer div p {
-	color: #FFFFFF;
+	color: #000000;
 	float: left;
 	font-family: Arial;
 	font-size: 15px;
